Fix charconv support with MSVC/GCC11

BUG: 437890